--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
       <version>2.4</version>
       <classifier>jdk15</classifier>
     </dependency>
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.44</version>
+    </dependency>
   </dependencies>
 
   <build>
